
===v8.5.4===
* New icon drag operation - Insert.
* Added Dark Icon and Mag'har to Unit Race condition.
* Added Stagger to the Resouce Display icon type.

====Bug Fixes====
* Fixed #1575 - Notification handlers can no longer be chosen when their parent module is disabled.

===v8.5.3===
* Guardians icon type now accounts for Implosion and the Consumption talent.

====Bug Fixes====
* Fixed #1544 - Blizzard changed return values of GetChannelList(), breaking chat channel text notifications.

===v8.5.2===
* Includes latest LibDogTag-Unit with fixes for [SoulShardParts] and others.
* Updated Guardian icon type for 8.0 Warlock changes.
* Back by popular demand, DR reset duration is now an icon-specific setting, and once again defaults to 18.

====Bug Fixes====
* Fixed #1534 - Attempt to register unknown event "WORLD_MAP_UPDATE"
* Fixed cusor position in tall textboxes sometimes being incorrect due to a Blizzard bug with FontString:SetSpacing()
* Fixed handling of pipe characters in export strings.

===v8.5.1===
* Changed DR reset duration to 20 seconds from 18 to increase consistency.

====Bug Fixes====
* Fixed #1509 - "Couldn't open Interface/AddOns/TellMeWhen_Options/"
* Fixed #1507 - Attempt to register unknown event "UNIT_VEHICLE"
* Fixed #1521 - \Components\Core\Utils.lua line 574: attempt to index local 'str' (a nil value)


===v8.5.0===
* Battle For Azeroth support. Please report bugs to https://wow.curseforge.com/projects/tellmewhen/issues. 
** I especially need help with the spell equivalencies (e.g. "Stunned", "DefensiveBuffs", etc.)
** If you notice spells that are missing or that shouldn't be there, please let me know!

===v8.4.5===
* Fixes for upcoming changes to ElvUI's cooldown timer texts.

===v8.4.4===
* TellMeWhen_Options no longer saves a spell cache to disk. Performance improvements have made it feasible to compute this each time you log in as it needed, resulting in faster log-in/log-out times.

====Bug Fixes====